[package]
name = "Archaeological_Assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["default"] }
iced_aw = { version = "0.11.0", default-features = false, features = ["date_picker", "tabs", "selection_list"] }
ciborium = "0.2.2"
serde = { version = "1.0.210", features = ["derive"] }
native-dialog = "0.7.0"
sugar = "0.2.0"
umya-spreadsheet = "2.1.2"